renvoyer les tags pour la recherche / les favoris